--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.11",
     "class-variance-authority": "^0.7.1",
@@ -22,11 +23,17 @@
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^3.2.0"
+    "react-hook-form": "^7.56.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
     "@types/react": "^18.2.38",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
