--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.11",
     "class-variance-authority": "^0.7.1",
