--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.11",
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.503.0",
     "next": "^14.0.3",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.3",
     "tailwind-merge": "^3.2.0",
