--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler", // Changed from "node" to "bundler" for better compatibility with modern tools
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
