--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,14 +1,22 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy to Firebase Hosting on Merge
 on:
   push:
     branches:
-      - main  # Changed from 'origin/main' to 'main'
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci && npm run build
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build Next.js App
+        run: npm run build
+      - name: Export Next.js App
+        run: npm run export
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
