--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    "export": "next export"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
